# verax

./: .cmake-format.yaml  .gersemirc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
.claude/: CLAUDE.md
.github/workflows/: README.md  build_and_test.yml  linux.yml  macos.yml  preliminary_checks.yml  velox-status.yml
CMake/: Findreadline.cmake
CMake/resolve_dependency_modules/: antlr4-runtime.cmake
axiom/cli/: AxiomSql.cpp  CMakeLists.txt  CatalogProperties.cpp  CatalogProperties.h  Connectors.cpp  Connectors.h  Console.cpp  Console.h  GenerateTpchData.cpp  ImportData.cpp  ImportHiveData.cpp  QueryGraphviz.cpp  QueryIdGenerator.cpp  QueryIdGenerator.h  README.md  ResultPrinter.cpp  SqlQueryRunner.cpp  SqlQueryRunner.h  StdinReader.cpp
axiom/cli/linenoise/: linenoise.c
axiom/cli/tests/: CMakeLists.txt  CatalogPropertiesTest.cpp  CliTest.md  ConsoleTest.cpp  QueryIdGeneratorTest.cpp  SqlQueryRunnerTest.cpp  StdinReaderTest.cpp  TpchgenTest.md
axiom/common/: CMakeLists.txt  CatalogSchemaTableName.cpp  CatalogSchemaTableName.h  ConfigRegistry.cpp  ConfigRegistry.h  Enums.h  QueryRuntimeStats.cpp  QueryRuntimeStats.h  SchemaTableName.cpp  SchemaTableName.h  SchemaTypeName.cpp  SchemaTypeName.h  Session.cpp  Session.h  SessionConfig.cpp  SessionConfig.h  TrackedExecutor.cpp  TrackedExecutor.h
axiom/connectors/: CMakeLists.txt  ConnectorMetadata.cpp  ConnectorMetadata.h  ConnectorMetadataRegistry.cpp  ConnectorMetadataRegistry.h  ConnectorSession.h  ConnectorSplitManager.h  SchemaResolver.cpp  SchemaResolver.h  SchemaUtils.cpp  SchemaUtils.h
axiom/graphviz/: CMakeLists.txt  DerivedTableDotPrinter.cpp  DerivedTableDotPrinter.h  Html.h  LogicalPlanDotPrinter.cpp  LogicalPlanDotPrinter.h  MultiFragmentPlanDotPrinter.cpp  MultiFragmentPlanDotPrinter.h  Palette.h
axiom/logical_plan/: CMakeLists.txt  Expr.cpp  Expr.h  ExprApi.cpp  ExprApi.h  ExprPrinter.cpp  ExprPrinter.h  ExprResolver.cpp  ExprResolver.h  ExprVisitor.h  LogicalPlanDotPrinter.cpp  LogicalPlanNode.cpp  (+10 more)
axiom/logical_plan/tests/: CMakeLists.txt  ExprApiTest.cpp  ExprEqualityTest.cpp  ExprSerdeTest.cpp  ExprTest.cpp  LogicalPlanNodeEqualityTest.cpp  LogicalPlanNodeSerdeTest.cpp  NameAllocatorTest.cpp  NameMappingsTest.cpp  PlanBuilderTest.cpp  PlanPrinterTest.cpp
axiom/pyspark/: ArrowIpcLib.cpp  ArrowIpcLib.h  CMakeLists.txt  CollagenMain.cpp  CollagenMain.h  CollagenServer.cpp  CollagenService.cpp  CollagenService.h  Exception.h  Optimizer.cpp  Optimizer.h  SparkPlanPrinter.cpp  SparkPlanPrinter.h  SparkPlanVisitor.h  SparkToAxiom.cpp  SparkToAxiom.h  SparkVeloxConverter.cpp  SparkVeloxConverter.h
axiom/pyspark/runners/: CMakeLists.txt  LocalRunner.cpp  LocalRunner.h  Runner.cpp  Runner.h
axiom/pyspark/tests/: CMakeLists.txt  SparkToAxiomLambdaTest.cpp  SparkToAxiomSetOperationTest.cpp  SparkToAxiomUnnestTest.cpp  SparkToAxiomWithColumnsRenamedTest.cpp  SparkToAxiomWithColumnsTest.cpp  SparkVeloxConverterTest.cpp
axiom/runner/tests/: CMakeLists.txt  DistributedPlanBuilder.cpp  DistributedPlanBuilder.h  LocalRunnerTest.cpp  LocalRunnerTestBase.cpp  LocalRunnerTestBase.h  Main.cpp  PrestoQueryReplayRunner.cpp  PrestoQueryReplayRunner.h  PrestoQueryReplayRunnerTest.cpp
axiom/sql/presto/: AstBuilder.cpp  AstBuilder.h  AstExpressions.h  AstFunctions.h  AstLiterals.h  AstNode.h  AstNodesAll.h  AstNodesImpl.cpp  AstRelations.h  AstStatements.h  AstSupport.h  AstVisitor.h  CMakeLists.txt  ColumnsExpansion.cpp  ColumnsExpansion.h  ComprehensiveParserExample.cpp  DisplayNames.cpp  DisplayNames.h  ExpressionPlanner.cpp  ExpressionPlanner.h  GroupByPlanner.cpp  GroupByPlanner.h  ParserExample.cpp  ParserHelper.h  ParserOptions.h  PrestoParseError.h  PrestoParser.cpp  PrestoParser.h  PrestoSqlAstParser.cpp  PrestoSqlAstParser.h  PrestoSqlBaseListener.cpp  PrestoSqlBaseListener.h  PrestoSqlBaseVisitor.cpp  PrestoSqlBaseVisitor.h  PrestoSqlError.cpp  PrestoSqlError.h  PrestoSqlLexer.cpp  PrestoSqlLexer.h  PrestoSqlListener.cpp  PrestoSqlListener.h  (+13 more)
axiom/sql/presto/ast/: AstBuilder.cpp  AstBuilder.h  AstExpressions.h  AstFunctions.h  AstLiterals.h  AstNode.h  AstNodesAll.cpp  AstNodesAll.h  AstPrinter.cpp  AstPrinter.h  AstRelations.h  AstStatements.h  AstSupport.h  AstVisitor.h  CMakeLists.txt  DefaultTraversalVisitor.h  UpperCaseInputStream.h
axiom/sql/presto/ast/tests/: AstEqualityTest.cpp  CMakeLists.txt
axiom/sql/presto/docs/: BoundedCharacterTypes.md  PrestoSqlExtensions.md
axiom/sql/presto/example/: CMakeLists.txt  ParserExample.cpp
axiom/sql/presto/grammar/: CMakeLists.txt  PrestoSql.g4  PrestoSqlBaseListener.cpp  PrestoSqlBaseListener.h  PrestoSqlBaseVisitor.cpp  PrestoSqlBaseVisitor.h  PrestoSqlLexer.cpp  PrestoSqlLexer.h  PrestoSqlListener.cpp  PrestoSqlListener.h  PrestoSqlParser.cpp  PrestoSqlParser.h  PrestoSqlVisitor.cpp  PrestoSqlVisitor.h  README.md  add_license_headers.py  gen.sh
axiom/sql/presto/grammar/tests/: CMakeLists.txt  GrammarTest.cpp
axiom/sql/presto/tests/: AggregationParserTest.cpp  AstBuilderTest.cpp  CMakeLists.txt  ColumnFilteringTest.cpp  DdlParserTest.cpp  EnumLiteralTest.cpp  ExpectPrestoSqlError.h  ExprMatcher.cpp  ExprMatcher.h  ExprMatcherTest.cpp  ExpressionParserTest.cpp  GrammarTest.cpp  LogicalPlanMatcher.cpp  LogicalPlanMatcher.h  ParserHelper.cpp  ParserHelper.h  PrestoParseErrorTest.cpp  PrestoParserTest.cpp  PrestoParserTestBase.cpp  PrestoParserTestBase.h  PrestoSqlErrorTest.cpp  ReferencedTablesTest.cpp  SortParserTest.cpp  TableExtractorTest.cpp  UpperCasedInput.h
optimizer/: BitSet.h  CMakeLists.txt  Cost.cpp  Cost.h  Filters.cpp  Filters.h  FunctionRegistry.cpp  JoinSample.cpp  ParallelExpr.cpp  Plan.cpp  Plan.h  PlanObject.cpp  PlanObject.h  PlanUtils.cpp  PlanUtils.h  QueryGraph.cpp  QueryGraph.h  QueryGraphContext.cpp  QueryGraphContext.h  RelationOp.cpp  RelationOp.h  Schema.cpp  Schema.h  SchemaResolver.cpp  SchemaResolver.h  Subfields.cpp  ToGraph.cpp  ToVelox.cpp  VeloxHistory.cpp  VeloxHistory.h
scripts/: check-velox-readme.sh
verax/: CMakeLists.txt  QueryGraphContext.h
(+369 files in other folders)
