# Copyright (c) Meta Platforms, Inc. and its affiliates.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_executable(
  axiom_logical_plan_tests
  ExprEqualityTest.cpp
  ExprSerdeTest.cpp
  ExprTest.cpp
  LogicalPlanNodeSerdeTest.cpp
  LogicalPlanNodeEqualityTest.cpp
  NameAllocatorTest.cpp
  NameMappingsTest.cpp
  ExprApiTest.cpp
  PlanBuilderTest.cpp
  PlanPrinterTest.cpp
)

add_test(axiom_logical_plan_tests axiom_logical_plan_tests)

target_link_libraries(
  axiom_logical_plan_tests
  axiom_logical_plan_builder
  axiom_logical_plan
  axiom_logical_plan_matcher
  axiom_test_connector
  velox_functions_prestosql
  velox_aggregates
  velox_vector_test_lib
  GTest::gtest
  GTest::gtest_main
  GTest::gmock
)
